[gd_scene load_steps=14 format=3 uid="uid://xyot0aambvq1"]

[ext_resource type="Script" uid="uid://bgqglerkcylxx" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="1_ei22d"]
[ext_resource type="Script" uid="uid://caq8rcu0lvj6u" path="res://gd/grid-dock.gd" id="1_l4qic"]
[ext_resource type="PackedScene" uid="uid://c64dchpnpluy" path="res://gd/grid-slot.tscn" id="1_m5sku"]
[ext_resource type="Script" uid="uid://b7h0k2h2qwlqv" path="res://addons/SmoothScroll/scroll_damper/expo_scroll_damper.gd" id="2_bll8t"]
[ext_resource type="Script" uid="uid://bxm74cakn4mna" path="res://gd/grid.gd" id="4_l4qic"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bll8t"]
draw_center = false
border_width_bottom = 12
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wv6dg"]

[sub_resource type="Theme" id="Theme_3gu35"]
HScrollBar/styles/scroll = SubResource("StyleBoxFlat_bll8t")
HScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_wv6dg")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l4qic"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ei22d"]

[sub_resource type="Resource" id="Resource_xxuka"]
script = ExtResource("2_bll8t")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="Resource" id="Resource_12v6i"]
script = ExtResource("2_bll8t")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hmxq0"]
content_margin_left = 24.0
content_margin_top = 24.0
content_margin_right = 24.0
content_margin_bottom = 24.0
bg_color = Color(1, 1, 1, 0.223529)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
shadow_color = Color(0, 0, 0, 0.129412)
shadow_size = 12

[node name="Grid" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dock" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 7.0
offset_bottom = 135.0
grow_horizontal = 2
theme_override_constants/separation = 24
alignment = 1
script = ExtResource("1_l4qic")

[node name="Slot1" parent="Dock" instance=ExtResource("1_m5sku")]
layout_mode = 2
mouse_filter = 1

[node name="GridScroll" type="ScrollContainer" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 149.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_3gu35")
theme_override_styles/panel = SubResource("StyleBoxEmpty_l4qic")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ei22d")
follow_focus = true
draw_focus_border = true
scroll_deadzone = 100
script = ExtResource("1_ei22d")
wheel_scroll_damper = SubResource("Resource_xxuka")
dragging_scroll_damper = SubResource("Resource_12v6i")
metadata/_custom_type_script = "uid://bgqglerkcylxx"

[node name="HBoxContainer" type="HBoxContainer" parent="GridScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Spacer" type="Control" parent="GridScroll/HBoxContainer"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
mouse_filter = 1

[node name="GridPanel" type="PanelContainer" parent="GridScroll/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_hmxq0")
script = ExtResource("4_l4qic")

[node name="GridV" type="HBoxContainer" parent="GridScroll/HBoxContainer/GridPanel"]
layout_mode = 2

[node name="Column0" type="VBoxContainer" parent="GridScroll/HBoxContainer/GridPanel/GridV"]
layout_mode = 2

[node name="Slot0" parent="GridScroll/HBoxContainer/GridPanel/GridV/Column0" instance=ExtResource("1_m5sku")]
layout_mode = 2
mouse_filter = 1

[node name="Spacer2" type="Control" parent="GridScroll/HBoxContainer"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
mouse_filter = 1

[connection signal="scroll_ended" from="GridScroll" to="GridScroll" method="hide_top"]
